# rust-fcp

./: .#README.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  tests.yml
src/: lib.rs
src/client/: fcp_types.rs  mod.rs  types.rs
src/types/: mod.rs  traits.rs
src/types/client/: fcp_types.rs  types.rs
